[package]
name = "ccs-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal TUI to select Claude Code providers from cc-switch and launch claude"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lily369/ccs-cli"

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
